fixed color contrast and gallery

--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ html,body
 }
 
 .nav_item a.current {
-    color: cornflowerblue;
+    color: rgb(0, 68, 255);;
     border: none;
     background-color: #dbdbdb;
     transition: background-color 0.2s ease-in;
@@ -166,7 +166,7 @@ header h1 {
 }
 
 .intro p b {
-    color: cornflowerblue;
+    color: rgb(22, 81, 241);;
 }
 
 .more_buttons {
@@ -184,7 +184,7 @@ header h1 {
 }
 
 .learn_more_bio {
-    background-color: cornflowerblue;
+    background-color: rgb(22, 81, 241);
     text-decoration: none;
     text-align: center;
     line-height: 30px;
@@ -219,7 +219,7 @@ header h1 {
 }
 
 .more_projects a {
-    color: cornflowerblue;
+    color: rgb(22, 81, 241);;
     text-decoration: none;
 }
 
@@ -322,7 +322,7 @@ img {
 }
 
 .links a {
-    background-color: cornflowerblue;
+    background-color: rgb(22, 81, 241);;
     color: rgb(54, 54, 54);
     text-decoration: none;
     padding: 15px 70px;
@@ -404,6 +404,31 @@ img {
 
 .flip-card {
     overflow: hidden;
+}
+
+.g-block {
+    width: 100%;
+    text-align: center;
+    padding-top: 100px;
+}
+
+.gcontainer {
+    margin: auto;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 450px;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    /*grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));*/
+    padding-top: 20px;
+    padding-bottom: 200px;
+    justify-content: center;
+}
+
+.gcontainer img {
+    object-fit: cover;
+    width: 450px;
+    height: 450px;
 }
 
 @media screen and (min-width: 600px) {
@@ -584,46 +609,6 @@ img {
         transition: opacity .4s ease-in, visibility .4s ease-in;
     }
 
-    /*
-    .about_me {
-        display: grid;
-        grid-template-columns: 250px 300px;
-        grid-template-rows: 550px 50px;
-        grid-column-gap: 1rem;
-        grid-row-gap: 0;
-        margin: 0px;
-        padding: 0px 2em 0px;
-        margin-top: 7vh;
-        height: 70vh;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .about_me h1 {
-        text-transform: uppercase;
-        font-size: 30px;
-        padding: 1rem;
-        padding-right: 0px;
-        padding-bottom: 0;
-        margin: 0;
-    }
-
-    .about_me p {
-        font-size: 10px;
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-        padding-left: 1rem;
-        padding-right: 0px;
-        line-height: 1rem;
-    }
-
-    .tim {
-        object-fit: cover;
-        max-width: 100%;
-        height: 400px;
-    }
-    */
-
     .about_me {
         display: grid;
         grid-template-columns: 1fr 1fr /*400px 500px*/;
@@ -672,6 +657,31 @@ img {
         padding-top: 30px;
         grid-column: 1 / 3;
     }
+
+    .g-block {
+        width: 100%;
+        text-align: center;
+        padding-top: 100px;
+    }
+    
+    .gcontainer {
+        margin: auto;
+        width: 100vw;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 400px 400px 400px;
+        grid-column-gap: 10px;
+        grid-row-gap: 10px;
+        /*grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));*/
+        padding-top: 20px;
+        padding-bottom: 200px;
+    }
+    
+    .gcontainer img {
+        object-fit: cover;
+        width: 100%;
+        height: 400px;
+    }
 }
 
 @media screen and (min-width: 1050px) {
@@ -682,69 +692,6 @@ img {
     .projects {
         grid-template-columns: 500px 500px;
     }
-/*
-    .projects {
-        grid-template-columns: 500px 500px;
-        grid-template-rows: 400px 300px 300px 700px 300px 400px 300px;
-        grid-column-gap: 2rem;
-        margin: 0px;
-        padding: 0px;
-        margin-top: 100px;
-        margin-bottom: 200px;
-        align-items: center;
-        justify-content: center;
-        overflow: hidden;
-    }
-
-    .projects h1 {
-        margin: 0px;
-    }
-
-    .projects img {
-        width: 100%;
-        height: 100%;
-        display: block;
-        object-fit: cover;
-    }
-
-    .info_1 {
-        grid-column: 2 / 3;
-        grid-row: 1/ 2;
-    }
-
-    .text_one {
-        grid-column: 1 / 3;
-    }
-
-    .text_challenge {
-        grid-column: 1 / 3;
-        grid-row: 3 / 4;
-        padding-top: 20px;
-        padding-bottom: 90px;
-    }
-
-    .mockup {
-        grid-column: 1 / 3;
-        grid-row: 4 / 5;
-    }
-
-    .text_goals {
-        grid-column: 1 / 3;
-        grid-row: 5 / 6
-    }
-
-    .ht {
-        grid-column: 1 / 2;
-        margin: 0;
-        padding: 0;
-    }
-
-    .text_two {
-        grid-column: 1 / 3;
-        margin: 0;
-        padding: 0;
-    }
-*/
 
     header {
         padding: 5px 35px;
@@ -765,20 +712,7 @@ img {
         left: 25%;
         top: 100px;
     }
-    /*
-    .container {
-        margin: 0px 15% 0px;
-        grid-template-columns: 50% 50%;
-        grid-column-gap: 2em;
-        grid-row-gap: 2em;
-        grid-template-rows: 600px 600px;
-        justify-content: center;
-    }
-    
-    img {
-        width: 100%;
-        height: 600px;
-    */
+
     .container {
         grid-template-rows: auto auto;
     }
@@ -809,47 +743,35 @@ img {
         text-decoration: none;
         padding: 10px;
     }
-    /*
-    .about_me {
-        display: grid;
-        grid-template-columns: 400px 500px;
-        grid-template-rows: 650px 50px;
-        grid-column-gap: 2rem;
-        margin: 0px;
-        padding: 0px;
-        margin-top: 7vh;
-        height: 70vh;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .about_me h1 {
-        text-transform: uppercase;
-        font-size: 30px;
-        padding: 1rem;
-        padding-right: 0px;
-    }
-
-    .about_me p {
-        font-family: 'Noto Sans', sans-serif;
-        font-size: 15px;
-        line-height: 28px;
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-        padding-left: 1rem;
-        padding-right: 0px;
-    }
-
-    .tim {
-        object-fit: cover;
-        max-width: 100%;
-        height: 500px;
-    }
-    */
 
     .about_me {
         grid-template-columns: 471.5px 471.5px;
         grid-column-gap: 10px;
+    }
+
+    .g-block {
+        width: 100%;
+        text-align: center;
+        padding-top: 100px;
+    }
+    
+    .gcontainer {
+        margin: auto;
+        width: 1000px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 400px 400px 400px;
+        grid-column-gap: 10px;
+        grid-row-gap: 10px;
+        /*grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));*/
+        padding-top: 20px;
+        padding-bottom: 200px;
+    }
+    
+    .gcontainer img {
+        object-fit: cover;
+        width: 400px;
+        height: 400px;
     }
 }
 
@@ -906,7 +828,7 @@ input[type="checkbox"] {
 }
 
 input[type="submit"] {
-    background-color: cornflowerblue;
+    background-color: rgb(22, 81, 241);;
     color: #f0f0f3;
     padding: 14px 20px;
     margin: 30px 0px;
@@ -940,31 +862,6 @@ input[type="submit"]:hover {
         line-height: 5vh;
         vertical-align: top;
     }
-}
-
-.g-block {
-    width: 100%;
-    text-align: center;
-    padding-top: 100px;
-}
-
-.gcontainer {
-    margin: auto;
-    width: 1000px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 400px 400px 400px;
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
-    /*grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));*/
-    padding-top: 20px;
-    padding-bottom: 200px;
-}
-
-.gcontainer img {
-    object-fit: cover;
-    width: 400px;
-    height: 400px;
 }
 
 .flip-card {
